examples/should-fail/f27_bad_global_chain.lean
def demo3_chain_u0 : Sort 2 :=
  Type

def demo3_bad_global_chain : demo3_chain_u0 :=
  Type
